2006-10-25  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump
	* compiler/valacompiler.vala: --version support
	* compiler/Makefile.am: always include config.h to keep compatibility
	* vapi/config.vala: add binding for config.h
	* vapi/Makefile.am: update

2006-10-25  Jürg Billeter  <j@bitron.ch>

	* vala/valasourcefile.vala: support dependencies on constants

2006-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: don't crash when comparing value type
	  with null

2006-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: don't crash on already resolved type
	  references
	* vala/valasemanticanalyzer.vala: support typeof expression
	* vala/valacodegenerator.vala: improve support for null-terminated
	  arrays
	* vala/valainterfacewriter.vala: don't write type arguments for arrays

2006-10-08  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: support enum values

2006-10-06  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.0.4 release

2006-10-06  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala, vala/valaflags.vala, vala/valaenum.vala,
	  vala/valadatatype.vala, vala/valaarray.vala, vala/valaclass.vala,
	  vala/valastruct.vala: add get and set value support
	* vala/valacodegenerator.vala: add user (arbitrary) signal support
	* vala/valadatatype.vala, vala/valamemorymanager.vala,
	  vala/valastruct.vala: correctly honor ref types in type arguments
	* ccode/valaccodedeclaration.vala, ccode/valaccodemodifiers.vala:
	  support register local variables
	* ccode/valaccodememberaccess.vala: make one line creation possible
	* vapi/glib-2.0.vala: fix return type of Glib.List.nth_data
	* tests/test-024.vala: add user signal test
	* tests/Makefile.am: update

2006-10-05  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valasemanticanalyzer.vala: complete support for
	  prefix increment and decrement operator

2006-10-05  Jürg Billeter  <j@bitron.ch>
