@@ -25,4 +25,5 @@ EXTRA_DIST = \
 	test-022.vala \
 	test-023.vala \
 	test-024.vala \
+	test-025.vala \
 	$(NULL)
