@@ -1,5 +1,14 @@
 2006-10-25  Jürg Billeter  <j@bitron.ch>
 
+	* vala/parser.y, vala/valacodevisitor.vala,
+	  vala/valasemanticanalyzer.vala, vala/valacodegenerator.vala,
+	  vala/valabaseaccess.vala: support base access
+	* vala/vala.h, vala/Makefile.am: update
+	* tests/test-025.vala: test base access
+	* tests/Makefile.am: update
+
+2006-10-25  Jürg Billeter  <j@bitron.ch>
+
 	* configure.ac: Post-release version bump
 	* compiler/valacompiler.vala: --version support
 	* compiler/Makefile.am: always include config.h to keep compatibility
